autospy_macro/src/snapshots/autospy_macro__generate__tests__arguments_marked_with_ignore_attribute_are_not_captured.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(quote!\n{\n    trait TestTrait\n    { fn function(&self, #[ignore] ignored: &str, captured: &str); }\n})"
---
trait TestTrait {
    fn function(&self, ignored: &str, captured: &str);
}
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<<str as ToOwned>::Owned, ()>,
}
impl TestTrait for TestTraitSpy {
    fn function(&self, _: &str, captured: &str) {
        self.function.spy(captured.to_owned())
    }
}
