autospy_macro/src/snapshots/autospy_macro__generate__tests__arguments_marked_with_multiple_attributes_retain_non_autospy_attributes.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 123
expression: "generate_pretty(parse_quote!\n{\n    trait TestTrait\n    {\n        fn\n        function(&self, #[some_attribute] #[autospy(ignore)] ignored: &str,\n        captured: &str);\n    }\n})"
---
trait TestTrait {
    fn function(&self, #[some_attribute] ignored: &str, captured: &str);
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<<str as ToOwned>::Owned, ()>,
}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    #[track_caller]
    fn function(&self, #[some_attribute] _: &str, captured: &str) {
        self.function.spy(captured.to_owned())
    }
}
