autospy_macro/src/snapshots/autospy_macro__generate__tests__async_trait.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 273
expression: "generate_pretty(quote!\n{ #[async_trait] trait TestTrait { async fn function(&self); } })"
---
#[async_trait]
trait TestTrait {
    async fn function(&self);
}
#[cfg(any(test, not(feature = "test")))]
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), ()>,
}
#[cfg(any(test, not(feature = "test")))]
#[async_trait]
impl TestTrait for TestTraitSpy {
    async fn function(&self) {
        self.function.spy(())
    }
}
