autospy_macro/src/snapshots/autospy_macro__generate__tests__async_trait_with_other_trait_requirements.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(parse_quote!\n{\n    #[async_trait] trait TestTrait: Send + Sync + 'static\n    { async fn function(&self); }\n})"
---
#[async_trait]
trait TestTrait: Send + Sync + 'static {
    async fn function(&self);
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), ()>,
}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
#[async_trait]
impl TestTrait for TestTraitSpy {
    #[track_caller]
    async fn function(&self) {
        self.function.spy(())
    }
}
