autospy_macro/src/snapshots/autospy_macro__generate__tests__borrowed_argument_is_converted_to_owned_type.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(parse_quote!\n{ trait TestTrait { fn function(&self, argument: &str); } })"
---
trait TestTrait {
    fn function(&self, argument: &str);
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<<str as ToOwned>::Owned, ()>,
}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    #[track_caller]
    fn function(&self, argument: &str) {
        self.function.spy(argument.to_owned())
    }
}
