autospy_macro/src/snapshots/autospy_macro__generate__tests__functions_marked_with_cfg_test_return_attribute_have_their_return_types_changed.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 278
expression: "generate_pretty(parse_quote!\n{\n    trait TestTrait\n    {\n        #[cfg_attr(test, autospy(returns = \"String\"))] fn function(&self) ->\n        impl ToString;\n    }\n})"
---
trait TestTrait {
    fn function(&self) -> impl ToString;
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), String>,
}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    fn function(&self) -> impl ToString {
        self.function.spy(())
    }
}
