autospy_macro/src/snapshots/autospy_macro__generate__tests__functions_marked_with_multiple_attributes_retain_non_autospy_attributes.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 230
expression: "generate_pretty(quote!\n{\n    trait TestTrait\n    {\n        #[some_attribute] #[autospy(returns = \"String\")] fn function(&self) ->\n        impl ToString;\n    }\n})"
---
trait TestTrait {
    #[some_attribute]
    fn function(&self) -> impl ToString;
}
#[cfg(any(test, not(feature = "test")))]
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), String>,
}
#[cfg(any(test, not(feature = "test")))]
impl TestTrait for TestTraitSpy {
    fn function(&self) -> impl ToString {
        self.function.spy(())
    }
}
