autospy_macro/src/snapshots/autospy_macro__generate__tests__method_with_no_arguments.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 93
expression: "generate_pretty(quote! { trait TestTrait { fn function(&self); } })"
---
trait TestTrait {
    fn function(&self);
}
#[cfg(any(test, not(feature = "test")))]
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), ()>,
}
#[cfg(any(test, not(feature = "test")))]
impl TestTrait for TestTraitSpy {
    fn function(&self) {
        self.function.spy(())
    }
}
